@@ -1769,10 +1769,8 @@ const gchar *utils_build_path(const gchar *first, ...)
  * @param path A path, which will have a separator added before the other strings.
  * @param ... Strings to concatenate (no directory separators will be
  * 	inserted between them).
- * @warning This returns temporary string contents only valid until the next call
- * to this function.
  * E.g. filename = utils_make_filename(app->datadir, "filetypes.", ext, NULL); */
-const gchar *utils_make_filename(const gchar *path, ...)
+gchar *utils_make_filename(const gchar *path, ...)
 {
 	static GString *buffer = NULL;
 	va_list args;
@@ -1787,7 +1785,7 @@ const gchar *utils_make_filename(const gchar *path, ...)
 	va_start(args, path);
 	utils_string_vappend(buffer, NULL, args);
 	va_end(args);
-	return buffer->str;
+	return g_strdup(buffer->str);
 }
 
 
