@@ -11,6 +11,8 @@
  * src/filetypes.c, src/filetypes.h:
    Refactor with filetypes_get_filename().
    Make filetypes_get_conf_extension() static.
+ * src/utils.c, src/utils.h, src/filetypes.c:
+   Make utils_make_filename() return a copy for safety.
 
 
 2011-04-10  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
@@ -31,7 +33,7 @@
 2011-04-08  Colomban Wendling  <colomban(at)geany(dot)org>
 
  * scintilla/lexers/LexCPP.cxx:
-   Make hightlighting of triple-quoted verbatim an option (Backport
+   Make highlighting of triple-quoted verbatim an option (Backport
    from Scintilla HG 3602:5536ed81a85b).
  * src/highlighting.c:
    Add highlight for triple-quoted verbatims.
